# drone

./: CMakeLists.txt  README.md  rzo_partitions.csv  sdkconfig  sdkconfig.old
PCB Design/drone/: drone.PrjPcb  main.SchDoc
PCB Design/drone/__Previews/: Sheet1.SchDocPreview  main.SchDocPreview
components/IMU_ICM20948/: CMakelists.txt  README.md  imu_icm20948.cpp  imu_icm20948.h
components/IMU_MPU6050/: CMakelists.txt  README.md  imu_mpu6050.cpp  imu_mpu6050.h
components/ai_camera/: CMakeLists.txt  README.md  ai_camera.cpp  ai_camera.h
components/battery_monitor/: CMakelists.txt  battery_monitor.cpp  battery_monitor.h
components/camera/: CMakeLists.txt  camera.cpp  camera.h
components/controller/: CMakeLists.txt  controller.cpp  controller.h
components/controller_module/: CMakeLists.txt  controller_module.cpp  controller_module.h
components/dc_motor_driver/: CMakeLists.txt  dc_motor_driver.cpp  dc_motor_driver.h
components/drone_server/: CMakeLists.txt  drone_server.cpp  drone_server.h
components/joysticks_console/: CMakeLists.txt  joysticks_console.cpp  joysticks_console.h
components/wifi_server/: CMakeLists.txt  wifi_server.cpp  wifi_server.h
drone python console/: main.py  parameters.csv
main/: idf_component.yml  main.cpp
motor drive programmer/motor_programmer/: motor_programmer.ino
